# package-training

./: .gitignore  Dockerfile  Justfile  README.md  main.py  pyproject.toml  ruff.toml
.github/workflows/: main-validate.yaml  publish.yaml
src/flow_training/: __init__.py  config.py  enums.py  logging_config.py  train.py  utils.py
tests/: test_config_example.py  test_exceptions_example.py
