[build-system]
requires = [
    "setuptools",
    "wheel",
]
build-backend = "setuptools.build_meta"

[project]
name = "flow_training"
version = "0.0.1"
description = "TrOCR Training Package for the Flow Project (flow-project.net)"
readme = { file = "README.md", content-type = "text/markdown" }
license = { text = "MIT" }
authors = [
    { name = "Dana Rebecca Meyer", email = "dameyer@techfak.uni-bielefeld.de" },
    { name = "Jonas Widmer", email = "jonas.widmer@unibe.ch" }
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
keywords = [
    "flow-project",
    "preprocessing",
    "htrflow",
    "digital-humanities",
    "htr",
    "handwritten-text-recognition",
    "datasets",
    "huggingface",
    "nlp",
    "machine-learning",
]

requires-python = ">=3.12"
dependencies = [
    "loguru>=0.7.3",
]

[dependency-groups]
dev = [
    "mypy>=1.15.0",
    "pre-commit>=4.1.0",
    "pytest>=8.3.4",
    "ruff>=0.9.5",
]

[project.urls]
Homepage = "https://flow-project.net"
Repository = "https://github.com/The-Flow-Project/package-training"
