[build-system]
requires = [
    "setuptools",
    "wheel",
]
build-backend = "setuptools.build_meta"

[project]
name = "flow_training"
dynamic = ["version"]
description = "TrOCR Training Package for the Flow Project (flow-project.net)"
readme = { file = "README.md", content-type = "text/markdown" }
license = { text = "MIT" }
authors = [
    { name = "Dana Rebecca Meyer", email = "dameyer@techfak.uni-bielefeld.de" },
    { name = "Jonas Widmer", email = "jonas.widmer@unibe.ch" }
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
keywords = [
    "flow-project",
    "preprocessing",
    "htrflow",
    "digital-humanities",
    "htr",
    "handwritten-text-recognition",
    "datasets",
    "huggingface",
    "nlp",
    "machine-learning",
]

requires-python = ">=3.12"
dependencies = [
    "accelerate>=1.12.0",
    "datasets>=4.5.0",
    "evaluate>=0.4.6",
    "jiwer>=4.0.0",
    "loguru>=0.7.3",
    "numpy>=2.4.1",
    "pillow>=12.1.0",
    "swanboard>=0.1.6",
    "swanlab>=0.7.7",
    "torch>=2.10.0",
    "torchvision>=0.25.0",
    "transformers>=4.57.6",
]

[dependency-groups]
dev = [
    "pre-commit>=4.1.0",
    "pytest>=8.3.4",
    "ruff>=0.9.5",
]

[project.urls]
Homepage = "https://flow-project.net"
Repository = "https://github.com/The-Flow-Project/package-training"

[tool.setuptools.dynamic]
version = { attr = "flow_training.__version__" }
